--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,144 +1,140 @@
-name: Cloud Gaming RDP
+name: RDP Hyper Optimized BR v2 (Instant PT-BR)
 
 on:
   workflow_dispatch:
 
 jobs:
-  cloud-gaming:
-    runs-on: windows-2022
-    timeout-minutes: 3600
+  secure-rdp:
+    runs-on: windows-latest
+    timeout-minutes: 360
 
     steps:
-      - name: Configure Core RDP Settings
-        continue-on-error: true
+      - name: 🧱 Habilitar RDP + Desativar NLA
         run: |
-          # Enable Remote Desktop and disable Network Level Authentication (NLA)
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0 -Force
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0 -Force
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "SecurityLayer" -Value 0 -Force
-
-          # Firewall for RDP
-          netsh advfirewall firewall add rule name="RDP" dir=in action=allow protocol=TCP localport=3389
-
-          # Restart the Remote Desktop Service
+          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
+                           -Name "fDenyTSConnections" -Value 0 -Force
+          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
+                           -Name "UserAuthentication" -Value 0 -Force
+          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
+                           -Name "SecurityLayer" -Value 0 -Force
+          netsh advfirewall firewall add rule name="RDP-Allow" dir=in action=allow protocol=TCP localport=3389
           Restart-Service -Name TermService -Force
 
-      - name: Create RDP User with Fixed Password
-        continue-on-error: true
+      - name: 👤 Criar Usuário RDP com Autologin
         run: |
           $username = "RDP"
-          $passwordPlain = "882188Adr"
-          $securePass = ConvertTo-SecureString $passwordPlain -AsPlainText -Force
+          $password = "882188Adr"
+          net user $username $password /add
+          net localgroup administrators $username /add
+          net localgroup "Remote Desktop Users" $username /add
 
-          if (-not (Get-LocalUser -Name $username -ErrorAction SilentlyContinue)) {
-              New-LocalUser -Name $username -Password $securePass -AccountNeverExpires -PasswordNeverExpires
+          # Ativar login automático
+          Set-ItemProperty -Path "HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon" `
+            -Name "AutoAdminLogon" -Value "1" -Type String
+          Set-ItemProperty -Path "HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon" `
+            -Name "DefaultUserName" -Value $username -Type String
+          Set-ItemProperty -Path "HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon" `
+            -Name "DefaultPassword" -Value $password -Type String
+
+      - name: 🌎 Configurar Idioma, Região e Teclado (PT-BR Instantâneo)
+        run: |
+          # Idioma e região
+          Set-WinSystemLocale -SystemLocale pt-BR
+          Set-WinUILanguageOverride -Language pt-BR
+          Set-WinUserLanguageList -LanguageList pt-BR -Force
+          Set-Culture pt-BR
+          Set-WinHomeLocation -GeoId 31
+          Set-WinCultureFromLanguageListOptOut -OptOut 0
+
+          # Formatos de data, hora e moeda
+          Set-Culture -CultureInfo "pt-BR"
+
+          # Teclado ABNT2 (sem reiniciar)
+          $LangList = New-WinUserLanguageList pt-BR
+          $LangList[0].InputMethodTips.Add("0416:00010416")
+          Set-WinUserLanguageList $LangList -Force
+
+          # Fuso horário: Brasília
+          Set-TimeZone -Id "E. South America Standard Time"
+
+          # Persistir idioma e layout no registro do usuário atual
+          reg add "HKCU\Control Panel\International" /v LocaleName /t REG_SZ /d "pt-BR" /f
+          reg add "HKCU\Control Panel\International" /v Locale /t REG_SZ /d "00000416" /f
+          reg add "HKCU\Control Panel\International" /v sShortDate /t REG_SZ /d "dd/MM/yyyy" /f
+          reg add "HKCU\Control Panel\International" /v sTimeFormat /t REG_SZ /d "HH:mm:ss" /f
+          reg add "HKCU\Keyboard Layout\Preload" /v 1 /t REG_SZ /d "00000416" /f
+          reg add "HKCU\Keyboard Layout\Substitutes" /v 00000416 /t REG_SZ /d "00010416" /f
+          reg add "HKCU\Control Panel\Desktop" /v PreferredUILanguages /t REG_MULTI_SZ /d "pt-BR" /f
+
+          # Aplicar também na tela de login (usuário padrão)
+          reg add "HKU\.DEFAULT\Control Panel\International" /v LocaleName /t REG_SZ /d "pt-BR" /f
+          reg add "HKU\.DEFAULT\Keyboard Layout\Preload" /v 1 /t REG_SZ /d "00000416" /f
+          reg add "HKU\.DEFAULT\Keyboard Layout\Substitutes" /v 00000416 /t REG_SZ /d "00010416" /f
+
+          # Aplicar instantaneamente (sem reiniciar)
+          rundll32.exe user32.dll,UpdatePerUserSystemParameters
+          Write-Host "✅ Configurações de idioma, teclado e região aplicadas instantaneamente (PT-BR, ABNT2, Brasília)"
+
+      - name: 🎮 Instalar Drivers NVIDIA GPU
+        run: |
+          $url = "https://us.download.nvidia.com/Windows/536.23/536.23-desktop-win10-win11-64bit-international-dch-whql.exe"
+          $driver = "$env:TEMP\nvidia_driver.exe"
+          Invoke-WebRequest -Uri $url -OutFile $driver
+          Start-Process -FilePath $driver -ArgumentList "-s","-noreboot" -Wait
+          Remove-Item $driver -Force
+
+      - name: ⚡ Otimizar Desempenho do Windows
+        run: |
+          # Efeitos visuais
+          reg add "HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\VisualEffects" /v VisualFXSetting /t REG_DWORD /d 2 /f
+          Set-ItemProperty "HKCU:\Control Panel\Desktop" -Name "UserPreferencesMask" -Value ([byte[]](0x90,0x12,0x03,0x80))
+          Set-ItemProperty "HKCU:\Control Panel\Desktop" -Name "MenuShowDelay" -Value "0"
+          Set-ItemProperty "HKCU:\Control Panel\Desktop" -Name "WaitToKillAppTimeout" -Value "2000"
+          Set-ItemProperty "HKCU:\Control Panel\Desktop" -Name "HungAppTimeout" -Value "1000"
+
+          # Desativar serviços desnecessários
+          $services = "DiagTrack","WSearch","Spooler"
+          foreach ($s in $services) {
+              Stop-Service -Name $s -ErrorAction SilentlyContinue
+              Set-Service -Name $s -StartupType Disabled -ErrorAction SilentlyContinue
           }
 
-          Add-LocalGroupMember -Group "Administrators" -Member $username
-          Add-LocalGroupMember -Group "Remote Desktop Users" -Member $username
+          # Transparências e efeitos extras
+          reg add "HKCU\Software\Microsoft\Windows\CurrentVersion\Themes\Personalize" /v EnableTransparency /t REG_DWORD /d 0 /f
+          reg add "HKCU\Software\Microsoft\Windows\CurrentVersion\Themes\Personalize" /v ColorPrevalence /t REG_DWORD /d 0 /f
 
-          echo "RDP_USER=$username" >> $env:GITHUB_ENV
-          echo "RDP_PASSWORD=$passwordPlain" >> $env:GITHUB_ENV
-
-      - name: Install Tailscale
-        continue-on-error: true
+      - name: 🌐 Instalar Tailscale
         run: |
-          $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
+          $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-latest-amd64.msi"
           $installerPath = "$env:TEMP\tailscale.msi"
           Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
           Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
           Remove-Item $installerPath -Force
 
-      - name: Establish Tailscale Connection
-        continue-on-error: true
+      - name: 🔗 Conectar ao Tailscale
         run: |
           & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID
           $tsIP = $null
-          $retries = 0
-          while (-not $tsIP -and $retries -lt 10) {
-              $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
-              Start-Sleep -Seconds 5
-              $retries++
+          for ($i=0; $i -lt 10; $i++) {
+            $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
+            if ($tsIP) { break }
+            Start-Sleep -Seconds 5
           }
-          if (-not $tsIP) { Write-Host "Aviso: Nenhum IP Tailscale detectado, continuando mesmo assim." }
+          if (-not $tsIP) { throw "No Tailscale IP found" }
           echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
 
-      - name: Verify RDP Accessibility
-        continue-on-error: true
+      - name: 🖥️ Mostrar Informações de Acesso
         run: |
-          Write-Host "Tailscale IP: $env:TAILSCALE_IP"
-          $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
-          if (-not $testResult.TcpTestSucceeded) { Write-Host "Aviso: Teste TCP falhou, mas o workflow continuará." }
-
-      - name: Install Common Gaming Applications (using Chocolatey)
-        continue-on-error: true
-        run: |
-          choco install googlechrome -y
-          choco install discord -y
-          choco install 7zip -y
-
-      - name: Install Visual C++ Runtimes
-        continue-on-error: true
-        run: |
-          $urls = @(
-            "https://aka.ms/vs/17/release/vc_redist.x64.exe",
-            "https://aka.ms/vs/17/release/vc_redist.x86.exe"
-          )
-          foreach ($url in $urls) {
-              $installer = "$env:TEMP\vc_redist.exe"
-              Invoke-WebRequest -Uri $url -OutFile $installer
-              Start-Process -FilePath $installer -ArgumentList "/install /quiet /norestart" -Wait
-              Remove-Item $installer -Force
-          }
-
-      - name: Install DirectX and Vulkan
-        continue-on-error: true
-        run: |
-          Write-Host "DirectX e Vulkan prontos para uso no Windows 10."
-
-      - name: Install Gaming Platforms
-        continue-on-error: true
-        run: |
-          $steamUrl = "https://cdn.cloudflare.steamstatic.com/client/installer/SteamSetup.exe"
-          $epicUrl = "https://launcher-public-service-prod06.ol.epicgames.com/launcher/api/installer/download/EpicGamesLauncherInstaller.msi"
-
-          Write-Host "Instalando Steam..."
-          Invoke-WebRequest -Uri $steamUrl -OutFile "$env:TEMP\SteamSetup.exe"
-          Start-Process -FilePath "$env:TEMP\SteamSetup.exe" -ArgumentList "/S" -Wait
-          Remove-Item "$env:TEMP\SteamSetup.exe" -Force
-
-          Write-Host "Instalando Epic Games Launcher..."
-          Invoke-WebRequest -Uri $epicUrl -OutFile "$env:TEMP\EpicInstaller.msi"
-          Start-Process msiexec.exe -ArgumentList "/i", "`"$env:TEMP\EpicInstaller.msi`"", "/quiet", "/norestart" -Wait
-          Remove-Item "$env:TEMP\EpicInstaller.msi" -Force
-
-      - name: Auto Create Restore Point Every 2 Minutes (RDP)
-        continue-on-error: true
-        run: |
-          $downloads = "C:\Users\RDP\Downloads"
-          if (-not (Test-Path $downloads)) { New-Item -Path $downloads -ItemType Directory -Force | Out-Null }
-
-          Write-Host "Iniciando criação automática de pontos de restauração a cada 2 minutos..."
-          $count = 1
-          while ($true) {
-              try {
-                  $rpName = "CloudGaming-RestorePoint-$count"
-                  Checkpoint-Computer -Description $rpName -RestorePointType "MODIFY_SETTINGS" -ErrorAction SilentlyContinue
-                  $file = Join-Path $downloads "$rpName.txt"
-                  echo "$(Get-Date) - Criado ponto de restauração: $rpName" | Out-File $file -Encoding UTF8 -Append
-                  Write-Host "Ponto criado e salvo em: $file"
-                  $count++
-              } catch {
-                  Write-Host "Erro ao criar ponto, continuando..."
-              }
-              Start-Sleep -Seconds 120
-          }
-
-      - name: Maintain Connection
-        run: |
-          Write-Host "`n=== RDP ACCESS ==="
-          Write-Host "Address: $env:TAILSCALE_IP"
-          Write-Host "Username: $env:RDP_USER"
-          Write-Host "Password: $env:RDP_PASSWORD"
-          Write-Host "==================`n"
+          Write-Host "`n=== ACESSO RDP ==="
+          Write-Host "Endereço: $env:TAILSCALE_IP"
+          Write-Host "Usuário: RDP"
+          Write-Host "Senha: 882188Adr"
+          Write-Host "🌎 Região: Brasil (pt-BR)"
+          Write-Host "⌨️ Teclado: ABNT2"
+          Write-Host "⏰ Fuso: Brasília (GMT-3)"
+          Write-Host "✅ GPU driver instalado"
+          Write-Host "✅ Otimização completa"
+          Write-Host "✅ Idioma PT-BR ativo instantaneamente"
+          Write-Host "✅ Tailscale pronto"
+          Write-Host "=============================="
           while ($true) { Start-Sleep -Seconds 300 }
